# big-mamba

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  mamba.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
bigmamba/: __init__.py  ast_nodes.py  builtins.py  errors.py  executor.py  lexer.py  parser.py  repl.py  transpiler.py
examples/: calculator.mamba  classes.mamba  fibonacci.mamba  guessing_game.mamba  hello.mamba
